# LiveCTF-DEFCON30

./: README.md  livectf.py
base-image/: Dockerfile  Makefile
base-image/challenge/: run_nsjail.sh  run_socat.sh
base-image/nsjail/: nsjail.conf
base-image/submitter/: .config.toml  .gitignore  Cargo.toml  Makefile
base-image/submitter/src/: main.rs
base-image/submitter/test/: run.sh  testserver.py
challenges/aes-of-spades/: metadata.toml
challenges/aes-of-spades/challenge/: .gitignore  Dockerfile  build.sh  config.toml
challenges/aes-of-spades/solution/: Pipfile  requirements.txt  solve.py
challenges/f-in-the-stack/: metadata.toml
challenges/f-in-the-stack/challenge/: Dockerfile  Dockerfile.run  build.sh  config.toml
challenges/f-in-the-stack/solution/: solve.py
challenges/fairy-nuff/: metadata.toml
challenges/fairy-nuff/challenge/: build.sh  config.toml
challenges/fairy-nuff/solution/: solve.py
challenges/fast-updater/: metadata.toml
challenges/loopy-brain/: metadata.toml
challenges/nerd-sniped/: .gitignore  metadata.toml
challenges/no-roplem/: metadata.toml
challenges/nopcoding/: metadata.toml
challenges/open-to-interpretation/: metadata.toml
challenges/over-easy/: metadata.toml
challenges/pacman/: metadata.toml
challenges/quick-cast/: metadata.toml
challenges/seek-and-destroy/: .gitignore  metadata.toml
challenges/stacks/: metadata.toml
challenges/story-time/: .gitignore  metadata.toml
challenges/syscall-me-maybe/: metadata.toml
template/: metadata.toml
template/solution/: solve.py
(+90 files in other folders)
